@@ -45,6 +45,7 @@ ul.tagging_ul li.tagging_new {
 }
 ul.tagging_ul li.tagging_new input.tagging_new_input {
   border: none;
+  outline: none;
   box-shadow: none;
   display: inline;
   height: inherit;
@@ -59,6 +60,9 @@ ul.tagging_ul li.tagging_new input.tagging_new_input {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   color: #666666;
+  max-height: 400px;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 .tt-dropdown-menu .tt-suggestion {
   padding: 3px 20px;
@@ -67,7 +71,7 @@ ul.tagging_ul li.tagging_new input.tagging_new_input {
 .tt-dropdown-menu .tt-suggestion p {
   margin: 0;
 }
-.tt-cursor {
+.tt-dropdown-menu .tt-cursor {
   color: #fff;
   background-color: #0097cf;
 }
