@@ -49,6 +49,7 @@ ul.tagging_ul {
         max-width: 200px;
         input.tagging_new_input {
             border: none;
+            outline: none;
             box-shadow: none;
             display: inline;
             height: inherit;
@@ -66,6 +67,9 @@ ul.tagging_ul {
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     color: #666666;
+    max-height: 400px;
+    overflow: scroll;
+    overflow-x: hidden;
     .tt-suggestion {
         padding: 3px 20px;
         line-height: 24px;
@@ -73,8 +77,8 @@ ul.tagging_ul {
             margin: 0;
         }
     }
-}
-.tt-cursor {
-    color: #fff;
-    background-color: #0097cf;
+    .tt-cursor {
+        color: #fff;
+        background-color: #0097cf;
+    }
 }
